# src/controllers/auth.controller.ts
@@ -30,6 +30,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
     async register(req: Request, res: Response) {
+        /**
+           #swagger.tags = ['Auth']
+         */
         const { fullname, username, email, password, confirmPassword } = req.body as unknown as TRegister;
 
        try {
@@ -56,6 +59,7 @@ export default {
 
     async login(req: Request, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.requestBody = {
             required: true,
             schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -116,6 +120,7 @@ export default {
 
     async mine(req: IReqUser, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
             "bearerAuth": []
          }]
